--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply text-gray-100;
+}
+
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
+}
+
+a,
+button {
+  cursor: pointer;
 }
